--- a/src/main/resources/templates/albums.html
+++ b/src/main/resources/templates/albums.html
@@ -8,6 +8,33 @@
     <title>Albums</title>
 </head>
 <body>
+<h1>Albums on Songr</h1>
+
+<ul th:each="album : ${albums}">
+    <li th:text="'Album Name: ' + ${album.title}"></li>
+    <li th:text="'Author: ' + ${album.artist}"></li>
+    <li th:text="'Number of Songs: ' + ${album.songCount}"></li>
+    <li><img th:src="${album.imgUrl}" src="test" alt="test"></li>
+    <div>
+        Songs:
+    </div>
+        <ul th:each="song : ${album.songsOnThisAlbum}">
+            <li th:text="${song.trackNumber} + '. ' + ${song.title} + ' (' + ${song.length} + ' seconds)'"></li>
+        </ul>
+    <form action="/add-song" method="post">
+        <fieldset>
+            <legend>Add Song</legend>
+            <label for="title">Title</label>
+            <input type="text" name="songTitle">
+            <label for="length">Length (in seconds) </label>
+            <input type="text" name="songLength">
+            <label for="trackNumber">Track Number</label>
+            <input type="text" name="trackNumber">
+            <input type="hidden" name="albumName" th:value="${album.title}">
+            <input type="submit" value="Add Song">
+        </fieldset>
+    </form>
+</ul>
 
 <form action="/albums" method="post">
     <fieldset>
@@ -25,12 +52,5 @@
         <input type="submit" value="Add Album">
     </fieldset>
 </form>
-
-<ul th:each="album : ${albums}">
-    <li th:text="'Album Name: ' + ${album.title}"></li>
-    <li th:text="'Author: ' + ${album.artist}"></li>
-    <li th:text="'Number of Songs: ' + ${album.songCount}"></li>
-    <li><img th:src="${album.imgUrl}" src="test" alt="test"></li>
-</ul>
 </body>
 </html>
