--- a/src/main/resources/templates/albums.html
+++ b/src/main/resources/templates/albums.html
@@ -15,23 +15,29 @@
     <li th:text="'Author: ' + ${album.artist}"></li>
     <li th:text="'Number of Songs: ' + ${album.songCount}"></li>
     <li><img th:src="${album.imgUrl}" src="test" alt="test"></li>
-    <div>
-        Songs:
-    </div>
-        <ul th:each="song : ${album.songsOnThisAlbum}">
-            <li th:text="${song.trackNumber} + '. ' + ${song.title} + ' (' + ${song.length} + ' seconds)'"></li>
-        </ul>
-    <form action="/add-song" method="post">
+<!--    <div>-->
+<!--        Songs:-->
+<!--    </div>-->
+<!--        <ul th:each="song : ${album.songsOnThisAlbum}">-->
+<!--            <li th:text="${song.trackNumber} + '. ' + ${song.title} + ' (' + ${song.length} + ' seconds)'"></li>-->
+<!--        </ul>-->
+<!--    <form action="/add-song" method="post">-->
+<!--        <fieldset>-->
+<!--            <legend>Add Song</legend>-->
+<!--            <label for="title">Title</label>-->
+<!--            <input type="text" name="songTitle">-->
+<!--            <label for="length">Length (in seconds) </label>-->
+<!--            <input type="text" name="songLength">-->
+<!--            <label for="trackNumber">Track Number</label>-->
+<!--            <input type="text" name="trackNumber">-->
+<!--            <input type="hidden" name="albumName" th:value="${album.title}">-->
+<!--            <input type="submit" value="Add Song">-->
+<!--        </fieldset>-->
+<!--    </form>-->
+    <form action="/album" method="get">
         <fieldset>
-            <legend>Add Song</legend>
-            <label for="title">Title</label>
-            <input type="text" name="songTitle">
-            <label for="length">Length (in seconds) </label>
-            <input type="text" name="songLength">
-            <label for="trackNumber">Track Number</label>
-            <input type="text" name="trackNumber">
-            <input type="hidden" name="albumName" th:value="${album.title}">
-            <input type="submit" value="Add Song">
+            <input type="hidden" name="albumTitle" th:value="${album.title}">
+            <input type="submit" value="View Album">
         </fieldset>
     </form>
 </ul>
